--- a/assets/css/source/components/_animations.scss
+++ b/assets/css/source/components/_animations.scss
@@ -34,8 +34,8 @@
 }
 
 @keyframes cs__spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
