--- a/assets/css/source/layout/_footer.scss
+++ b/assets/css/source/layout/_footer.scss
@@ -3,7 +3,7 @@
  */
 
 .cs__footer {
-    background: $light_gray;
+    background: $dark_gray;
     margin-top: auto; /* sticky footer */
     padding: $gutter 0;
     width: 100%;
