--- a/assets/css/source/layout/_header.scss
+++ b/assets/css/source/layout/_header.scss
@@ -45,12 +45,15 @@
             max-width: calc(100% - 164px);
         }
 
-        .logo {
+        .cs__logo {
             display: inline-block;
-            width: map-get($header_logoWidth,'default');
+            
+            &__image {
+                width: map-get($header_logoWidth,'default');
 
-            @include mediaMaxWidth(xs){
-                width: map-get($header_logoWidth,'xs');
+                @include mediaMaxWidth(xs){
+                    width: map-get($header_logoWidth,'xs');
+                }
             }
         }
     }
