--- a/assets/css/source/base/_normalize.scss
+++ b/assets/css/source/base/_normalize.scss
@@ -96,7 +96,7 @@ sub {
 // Embedded content
 img {
     border: 0;
-    display: block;
+    display: inline-block;
     height: auto;
     max-width: 100%;
     width: auto;
