--- a/assets/css/source/layout/content/_post.scss
+++ b/assets/css/source/layout/content/_post.scss
@@ -2,4 +2,77 @@
  * Content / Post
  */
 
-.cs__post {}
+.cs__post {
+    &__image {
+        margin: 0 0 25px;
+        overflow: hidden;
+        padding-top: 56.25%;
+        position: relative;
+
+        a {
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: block;
+            height: 130%;
+            left: 0;
+            position: absolute;
+            right: 0;
+            top: -30%;
+            transition: opacity $global_transition, transform $global_transition;
+
+            &:hover {
+                opacity: 0.85;
+                transform: scale(1.05);
+            }
+        }
+    }
+    &__title {
+        margin: 0 0 5px;
+    }
+    &__meta {
+        @include getStyles($small);
+        color: $medium_gray;
+        list-style: none;
+        margin: 0 0 15px;
+        padding: 0;
+
+        li {
+            display: inline;
+
+            &:after {
+                content: '|';
+                margin: 0 10px;
+            }
+
+            &:last-child:after {
+                content: none;
+            }
+        }
+    }
+    &__excerpt {
+        margin: 30px 0 15px;
+    }
+    &__tags {
+        @include getStyles($small);
+        list-style: none;
+        margin: 0 0 15px;
+        padding: 0;
+
+        li {
+            display: inline;
+
+            &:after {
+                content: '|';
+                margin: 0 10px;
+            }
+
+            &:last-child:after {
+                content: none;
+            }
+        }
+    }
+    &__navigation {
+        margin: 30px 0 0;
+    }
+}
