--- a/assets/css/source/components/_forms.scss
+++ b/assets/css/source/components/_forms.scss
@@ -171,6 +171,7 @@ select {
     background-repeat: no-repeat;
     background-size: 12px 8px;
     height: auto;
+    padding-right: 30px;
 
     &::-ms-expand {
         display: none;
