--- a/assets/css/source/abstracts/_variables.scss
+++ b/assets/css/source/abstracts/_variables.scss
@@ -32,6 +32,7 @@ $error: #E2001B;
 
 // ************ Typography *************
 $general_font: 'Open Sans', sans-serif;
+$general_fontSize: $html_fontSize;
 $general_color: $black;
 $general_lineHeight: 1.5;
 $general_margin: 1rem;
@@ -46,45 +47,45 @@ $text-bold: 700;
 
 $h1: (
     default: (
-		'font-size': 3rem,
+		'font-size': rem(48),
 		'line-height': 1.3
 	)
 );
 $h2: (
     default: (
-		'font-size': 2.625rem,
+		'font-size': rem(42),
 		'line-height': 1.3
 	)
 );
 $h3: (
     default: (
-		'font-size': 2rem,
+		'font-size': rem(32),
 		'line-height': 1.3
 	)
 );
 $h4: (
     default: (
-		'font-size': 1.5rem,
+		'font-size': rem(24),
 		'line-height': 1.3
 	)
 );
 $h5: (
     default: (
-		'font-size': 1.3125rem,
+		'font-size': rem(21),
 		'line-height': 1.3
 	)
 );
 $h6: (
     default: (
-		'font-size': 1.125rem,
+		'font-size': rem(18),
 		'line-height': 1.3
 	)
 );
 $small: (
-    'font-size': 0.875rem
+    'font-size': rem(14)
 );
 $tiny: (
-    'font-size': 0.75rem
+    'font-size': rem(12)
 );
 
 
