--- a/assets/css/source/base/_base.scss
+++ b/assets/css/source/base/_base.scss
@@ -26,7 +26,7 @@
 html {
     color: $general_color;
     font-family: $general_font;
-    font-size: 16px;
+    font-size: $general_fontSize;
     height: 100%;
     line-height: $general_lineHeight;
 
