20210406 pseudo elements fixed

--- a/assets/css/source/base/_typography.scss
+++ b/assets/css/source/base/_typography.scss
@@ -13,8 +13,8 @@ p {
 a {
     transition: all $global_transition;
     
-    &:before,
-    &:after {
+    &::before,
+    &::after {
 		transition: all $global_transition;
 	}
 
