--- a/assets/css/source/editor.scss
+++ b/assets/css/source/editor.scss
@@ -13,7 +13,7 @@ body {
     font-size: $general_fontSize;
     line-height: $general_lineHeight;
 }
-*, *:before, *:after {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 p {
@@ -25,8 +25,8 @@ p {
 a {
     transition: all $global_transition;
     
-    &:before,
-    &:after { transition: all $global_transition; }
+    &::before,
+    &::after { transition: all $global_transition; }
 
     &:not([class]),
     &[class=""] {
